CSS: Fix legend alignment in language-bindings

--- a/css/global.css
+++ b/css/global.css
@@ -415,7 +415,7 @@ a.image:hover {
 .bindingtable, .legend {
 	float: left;
 }
-.legend { margin-left: 32px; margin-bottom: 32px; }
+.legend { margin-left: 22px; margin-bottom: 32px; }
 .legend li { list-style: none; margin: 0 !important; }
 .legend ul { margin: 0 !important; }
 .footnote {
